fixes research spacing 16

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -250,12 +250,12 @@ p.research-date {
     font-weight: normal;
 }
 
-/*.research-paper {
+.research-paper {
     max-width: 75%;
     margin: 0 auto;
     padding-top: 20px;
 }
 
-/*a.carousel-control {
+a.carousel-control {
     top: 20px;
-}*/
+}
